--- a/imgui.ini
+++ b/imgui.ini
@@ -3,3 +3,13 @@ Pos=60,60
 Size=400,400
 Collapsed=0
 
+[Window][Debug1]
+Pos=212,142
+Size=606,303
+Collapsed=1
+
+[Window][Dear ImGui Demo]
+Pos=630,600
+Size=550,83
+Collapsed=1
+
