--- a/imgui.ini
+++ b/imgui.ini
@@ -23,3 +23,13 @@ Pos=55,232
 Size=259,239
 Collapsed=0
 
+[Window][Camera]
+Pos=727,47
+Size=588,358
+Collapsed=0
+
+[Window][Rail Camera]
+Pos=489,35
+Size=474,150
+Collapsed=0
+
