--- a/imgui.ini
+++ b/imgui.ini
@@ -14,8 +14,8 @@ Size=550,83
 Collapsed=0
 
 [Window][Player]
-Pos=134,53
-Size=380,136
+Pos=129,52
+Size=380,156
 Collapsed=0
 
 [Window][EBullet]
@@ -29,7 +29,12 @@ Size=588,358
 Collapsed=0
 
 [Window][Rail Camera]
-Pos=459,89
-Size=474,150
+Pos=26,215
+Size=474,143
+Collapsed=0
+
+[Window][Enemy]
+Pos=60,60
+Size=152,54
 Collapsed=0
 
