--- a/imgui.ini
+++ b/imgui.ini
@@ -38,3 +38,13 @@ Pos=60,60
 Size=152,54
 Collapsed=0
 
+[Window][mouse]
+Pos=986,54
+Size=265,392
+Collapsed=0
+
+[Window][ ]
+Pos=60,60
+Size=82,54
+Collapsed=0
+
