--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,12 @@ Size=550,83
 Collapsed=0
 
 [Window][Player]
-Pos=60,60
+Pos=75,89
 Size=257,90
+Collapsed=0
+
+[Window][Rail Camera]
+Pos=58,60
+Size=330,203
 Collapsed=0
 
