--- a/imgui.ini
+++ b/imgui.ini
@@ -15,11 +15,16 @@ Collapsed=0
 
 [Window][Player]
 Pos=75,89
-Size=257,90
+Size=276,144
 Collapsed=0
 
 [Window][Rail Camera]
 Pos=58,60
 Size=330,203
+Collapsed=0
+
+[Window][DebugCamera]
+Pos=60,60
+Size=135,48
 Collapsed=0
 
