--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=550,83
 Collapsed=0
 
 [Window][Player]
-Pos=75,89
+Pos=65,193
 Size=276,144
 Collapsed=0
 
@@ -25,6 +25,11 @@ Collapsed=0
 
 [Window][DebugCamera]
 Pos=60,60
-Size=135,48
+Size=212,132
+Collapsed=0
+
+[Window][Model]
+Pos=60,60
+Size=68,100
 Collapsed=0
 
