--- a/imgui.ini
+++ b/imgui.ini
@@ -29,7 +29,12 @@ Size=212,132
 Collapsed=0
 
 [Window][Model]
+Pos=30,495
+Size=410,32
+Collapsed=0
+
+[Window][Global Variables]
 Pos=60,60
-Size=68,100
+Size=404,135
 Collapsed=0
 
