画面遷移修正 衝突判定 攻撃仮完成

--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=550,83
 Collapsed=0
 
 [Window][Player]
-Pos=65,193
+Pos=75,146
 Size=276,144
 Collapsed=0
 
@@ -39,7 +39,12 @@ Size=404,135
 Collapsed=0
 
 [Window][Enemy]
-Pos=60,60
+Pos=84,328
 Size=265,138
+Collapsed=0
+
+[Window][END]
+Pos=60,60
+Size=175,112
 Collapsed=0
 
