--- a/imgui.ini
+++ b/imgui.ini
@@ -14,7 +14,7 @@ Size=550,83
 Collapsed=0
 
 [Window][Player]
-Pos=75,146
+Pos=129,138
 Size=276,144
 Collapsed=0
 
@@ -46,5 +46,25 @@ Collapsed=0
 [Window][END]
 Pos=60,60
 Size=175,112
+Collapsed=0
+
+[Window][start]
+Pos=58,83
+Size=348,163
+Collapsed=0
+
+[Window][play]
+Pos=60,60
+Size=249,133
+Collapsed=0
+
+[Window][clear]
+Pos=60,60
+Size=181,128
+Collapsed=0
+
+[Window][end]
+Pos=60,60
+Size=72,48
 Collapsed=0
 
